# strymonas-ocaml

./: .gitignore  .merlin  LICENSE  Makefile  README.md  strymonas-pure.opam
benchmarks/: .gitignore  Makefile  README.md  benchmark.ml  benchmark_abstract.ml  benchmark_baseline.ml  benchmark_batteries.ml  benchmark_c.ml  benchmark_iter.ml  benchmark_seq.ml  benchmark_streaming.ml  benchmark_strymonas.ml  benchmark_types.ml  util.ml
examples/: .gitignore  Makefile  Makefile.common
examples/TryFirst/: 0README.dr  Makefile  simple.ml  simple_c.ml
examples/amradio/: Makefile  am_radio.ml
examples/gnuradio-fm/: Makefile  README.md  atan_test.c  bench_main.c  fast_atanf.h  fir.ml  main.ml  note.md  parameters.ml  play_main.c  stream_gnuradio_sdr_fn.ml  utils.c  utils.h
examples/gnuradio-fm/baseline/: CMakeLists.txt  Makefile  env_intelmac.cmake  fmradio.cpp  main.cpp
examples/gnuradio-fm/baseline-pi/: CMakeLists.txt  Makefile  env_armv6l.cmake  fmradio.cpp  fmradio.hpp  main.cpp  utils.c  utils.h
examples/monitor/: Makefile  monitor.ml  util.ml
examples/run-length-encoding/: Makefile  apples.c  apples.ml  rle.ml
examples/sliding-window/: Makefile  sliding_window.ml
examples/streamit-fm/: Makefile  README.md  fir.ml  main.ml  parameters.ml  sit_emulator.ml  sit_experiments.ml  stream_streamit_sdr_fn.ml  test.ml  test_c.ml  util.ml
examples/streamit-fm/streamit/: .gitignore  Makefile  README.md  bench.sh  benchmarks.h  benchmarks_gen.c  fmref.patch  main.c  memory.sh  memory_profile.c  utils.h
lib/: 0README.dr  Derivation.agda  META  META.default  META.pure  Makefile  backends.ml  backends_pure.ml  cde.mli  cde_ex.mli  cde_top.mli  derivation.ml  intuition.ml  pk_cde.ml  pk_coll.ml  stream_cooked.mli  stream_cooked_fn.ml  stream_raw.mli  stream_raw_fn.ml  strymonas-pure.opam  window_fn.ml
lib/backends/C/: c_ast.mli  c_cde.ml  c_pp.ml  cabs.ml  cprint.ml  offshoringIR.ml  offshoringIR.mli  offshoringIR_pp.ml
lib/backends/Trx/: trx_code.ml  trx_code_common.ml  trx_code_native.ml
test/: Makefile  test_stream.ml  test_window.ml
